fixed too narrow grid-container

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -68,4 +68,8 @@ h6 {
   outline: none;
 }
 
+.grid-container {
+  width: 100%;
+}
+
 @include foundation-everything;
